test/files/neg/t7623.check
t7623.scala:21: warning: A repeated case parameter or extracted sequence is not matched by a sequence wildcard (_*), and may fail at runtime.
  def g = "" match { case X(s, t) => }               // warn
                          ^
t7623.scala:23: warning: Sequence wildcard (_*) does not align with repeated case parameter or extracted sequence; the result may be unexpected.
  def h = "" match { case X(s, t, u @ _*) => }       // warn
                          ^
t7623.scala:11: warning: A repeated case parameter or extracted sequence is not matched by a sequence wildcard (_*), and may fail at runtime.
  def g = C("") match { case C(s, t) => }            // warn
                             ^
t7623.scala:13: warning: Sequence wildcard (_*) does not align with repeated case parameter or extracted sequence; the result may be unexpected.
  def h = C("") match { case C(s, t, u @ _*) => }    // warn
                             ^
error: No warnings can be incurred under -Xfatal-warnings.
four warnings found
one error found
